--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && node ./dist/src server.js"
+    "start": "tsc && node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +14,18 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.30",
     "@types/pg": "^8.15.4"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.17",
     "bcryptjs": "^3.0.2",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0"
   }
