--- a/backend/package.json
+++ b/backend/package.json
@@ -4,23 +4,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && node ./dist/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.19",
-    "@types/dotenv": "^6.1.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.30",
-    "@types/pg": "^8.15.4"
-  },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.17",
     "bcryptjs": "^3.0.2",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
