--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,9 +40,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.27.1",
-    "@eslint/js": "^9.28.0",
-    "eslint": "^9.28.0",
-    "eslint-plugin-react": "^7.37.5"
+    "@eslint/js": "^9.29.0",
+    "eslint": "^9.29.0",
+    "eslint-plugin-react": "^7.37.5",
+    "react-test-renderer": "^19.1.0"
   }
 }
