--- a/.github/workflows/frontend-CI-CD.yml
+++ b/.github/workflows/frontend-CI-CD.yml
@@ -1,4 +1,4 @@
-name: Backend CI/CD
+name: Frontend CI/CD
 
 on:
   push:
@@ -21,19 +21,19 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
+        cache-dependency-path: frontend/package-lock.json
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ./backend
+      working-directory: ./frontend
 
     - name: Build project
       run: npm run build --if-present
-      working-directory: ./backend
+      working-directory: ./frontend
 
     - name: Run tests
       run: npm test --if-present
-      working-directory: ./backend
+      working-directory: ./frontend
   
   deploy:
     name: Deploy Backend to Render
@@ -42,7 +42,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: Deploy to Render via webhook
+      - name: Deploy to Netlify via webhook
         env:
-          RENDER_DEPLOY_WEBHOOK_URL: ${{ secrets.RENDER_DEPLOY_WEBHOOK_URL }}
-        run: curl "$RENDER_DEPLOY_WEBHOOK_URL"
+          RENDER_DEPLOY_WEBHOOK_URL: ${{ secrets.NETLIFY_DEPLOY_WEBHOOK_URL }}
+        run: curl "$NETLIFY_DEPLOY_WEBHOOK_URL"
