--- a/.github/workflows/frontend-CI-CD.yml
+++ b/.github/workflows/frontend-CI-CD.yml
@@ -36,13 +36,13 @@ jobs:
       working-directory: ./frontend
   
   deploy:
-    name: Deploy Backend to Render
+    name: Deploy Frontend to Netlify
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Deploy to Netlify via webhook
-        env:
-          RENDER_DEPLOY_WEBHOOK_URL: ${{ secrets.NETLIFY_DEPLOY_WEBHOOK_URL }}
         run: curl "$NETLIFY_DEPLOY_WEBHOOK_URL"
+        env:
+          NETLIFY_DEPLOY_WEBHOOK_URL: ${{ secrets.NETLIFY_DEPLOY_WEBHOOK_URL }}
