--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.5.0",
+    "jest": "^27.5.1",
     "material-ui-confirm": "^4.0.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -27,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "npm run lint && react-scripts test",
+    "test:ci": "react-scripts test --coverage --watchAll=false",
     "lint": "eslint src",
     "eject": "react-scripts eject"
   },
@@ -43,10 +45,32 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@eslint/js": "^9.29.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
     "react-test-renderer": "^19.1.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.test.{js,jsx,ts,tsx}",
+      "!src/**/*.spec.{js,jsx,ts,tsx}",
+      "!src/index.js",
+      "!src/reportWebVitals.js",
+
+      "!src/Dashboard/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    }
   }
 }
