--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -25,15 +25,15 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ./frontend
+      working-directory: ./client
 
     - name: Build project
       run: npm run build --if-present
-      working-directory: ./frontend
+      working-directory: ./client
 
     - name: Run tests
       run: npm test --if-present
-      working-directory: ./frontend
+      working-directory: ./client
   
   deploy:
     name: Deploy Frontend to Netlify
