--- a/.github/workflows/server-ci-cd.yml
+++ b/.github/workflows/server-ci-cd.yml
@@ -25,15 +25,15 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ./backend
+      working-directory: ./server
 
     - name: Build project
       run: npm run build --if-present
-      working-directory: ./backend
+      working-directory: ./server
 
     - name: Run tests
       run: npm test --if-present
-      working-directory: ./backend
+      working-directory: ./server
   
   deploy:
     name: Deploy Backend to Render
