--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Frontend CI/CD
+name: Client CI/CD
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+        cache-dependency-path: client/package-lock.json
 
     - name: Install dependencies
       run: npm ci
@@ -36,7 +36,7 @@ jobs:
       working-directory: ./client
   
   deploy:
-    name: Deploy Frontend to Netlify
+    name: Deploy Client to Netlify
     runs-on: ubuntu-latest
     needs: build
 
