--- a/.github/workflows/server-ci-cd.yml
+++ b/.github/workflows/server-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Backend CI/CD
+name: Server CI/CD
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
+        cache-dependency-path: server/package-lock.json
 
     - name: Install dependencies
       run: npm ci
@@ -36,7 +36,7 @@ jobs:
       working-directory: ./server
   
   deploy:
-    name: Deploy Backend to Render
+    name: Deploy Server to Render
     runs-on: ubuntu-latest
     needs: build
 
